fixing product page on mobile

--- a/assets/scss/layout/_page.scss
+++ b/assets/scss/layout/_page.scss
@@ -52,28 +52,37 @@
     }
 
     .hero-content {
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
+      @include breakpoint(sm) {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+      }
+
       height: 100%;
 
       .container {
+        @include breakpoint(sm) {
+          padding-right: 15px;
+          padding-left: 15px;
+        }
+
         position: relative;
+        padding: 0;
         height: 100%;
       }
 
       .hero-badge {
         @include breakpoint(sm) {
+          position: absolute;
+          bottom: 0;
           left: 15px;
           height: calc(100% - 100px);
         }
 
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        min-height: 120px;
+        position: relative;
+        min-height: 320px;
         max-width: 320px;
         width: 100%;
         height: 100%;
